--- a/src/app/modules/main-panel/components/notes-repository/notes-repository.component.html
+++ b/src/app/modules/main-panel/components/notes-repository/notes-repository.component.html
@@ -1,1 +1,4 @@
-<p>notes-repository works!</p>
+<p>NOTAS Y ACORDES</p>
+<div *ngFor="let octave of this.octaves; let i = index">
+  <app-octave></app-octave>
+</div>
