feat(main-panel): se muestran las octavas con todas sus notas

--- a/src/app/modules/main-panel/components/main/main.component.html
+++ b/src/app/modules/main-panel/components/main/main.component.html
@@ -4,14 +4,12 @@
   </div>
 </nav>
 <hr>
-<div class="row">
-  <div class="col">
+<div class="d-flex justify-content-around">
     <app-notes-repository></app-notes-repository>
-  </div>
-  <div class="col">
+</div>
+<div class="d-flex justify-content-around">
     <app-melody-control></app-melody-control>
-  </div>
-  <div class="col">
+
     <app-assembler-code></app-assembler-code>
-  </div>
+
 </div>
