--- a/src/app/modules/main-panel/components/notes-repository/notes-repository.component.html
+++ b/src/app/modules/main-panel/components/notes-repository/notes-repository.component.html
@@ -1,4 +1,16 @@
 <p>NOTAS Y ACORDES</p>
-<div *ngFor="let octave of this.octaves; let i = index">
-  <app-octave></app-octave>
+<div class="d-flex justify-content-between flex-wrap">
+  <div *ngFor="let octave of this.octaves; let i = index">
+    <a class="btn btn-primary" data-bs-toggle="collapse" href="#info-octave-{{i + 1}}" role="button"
+      aria-expanded="false" aria-controls="info-octave">
+      <h5>Octava {{i + 1}}</h5>
+    </a>
+
+    <div class="collapse" id="info-octave-{{i + 1}}">
+      <div class="card card-body">
+        <app-octave [octaveIndex]="i + 1"></app-octave>
+      </div>
+    </div>
+    <br>
+  </div>
 </div>
