--- a/src/app/modules/main-panel/components/melody-control/melody-control.component.html
+++ b/src/app/modules/main-panel/components/melody-control/melody-control.component.html
@@ -1,1 +1,13 @@
-<p>melody-control works!</p>
+<h6><b>CONTROL DE LA MELODÍA</b></h6>
+<br>
+
+<div class="separacion-panel-voces">
+
+  <app-voice voz="1"></app-voice>
+  <br><br>
+  <app-voice voz="2"></app-voice>
+  <br><br>
+
+  <app-voice voz="3"></app-voice>
+
+</div>
