feat(services): Se crea el servicio de notas y el servicio de voz.
 El servicio de notas gestionará cuando el usuario seleccione una nota
 del conjunto de octavas. El servicio de voz, recogerá y almacenará cada
 nota que se añade en el correspondiente canal de voz, de acuerdo al
 canal o canales que estén seleccionados.

--- a/src/app/modules/main-panel/components/melody-control/melody-control.component.html
+++ b/src/app/modules/main-panel/components/melody-control/melody-control.component.html
@@ -1,13 +1,22 @@
+<div class="d-flex justify-content-center">
 <h6><b>CONTROL DE LA MELODÍA</b></h6>
+</div>
 <br>
 
-<div class="separacion-panel-voces">
+<div class="d-flex justify-content-around">
+  <i class="bi-play-circle pointer" style="font-size: 2rem; color: green"></i>
+  <i class="bi-pause-circle pointer" style="font-size: 2rem; color: black"></i>
+  <i class="bi-stop-circle pointer" style="font-size: 2rem; color: red"></i>
+</div>
 
-  <app-voice voz="1"></app-voice>
+
+<div class="border-control-melodia separacion-panel-voces">
+
+  <app-voice voice="1" [activated]=true [noteAdded]="this.note"></app-voice>
   <br><br>
-  <app-voice voz="2"></app-voice>
+  <app-voice voice="2" [noteAdded]="this.note"></app-voice>
   <br><br>
 
-  <app-voice voz="3"></app-voice>
+  <app-voice voice="3" [noteAdded]="this.note"></app-voice>
 
 </div>
