--- a/src/app/modules/main-panel/components/voice/voice.component.scss
+++ b/src/app/modules/main-panel/components/voice/voice.component.scss
@@ -2,5 +2,10 @@
   border-style: solid;
   border-width: thin;
   border-color: black;
-  height: 50px;
+  height: 60px;
+}
+
+.sep-notas {
+  padding-left: 2px;
+  padding-right: 2px;
 }
