--- a/src/app/modules/main-panel/components/melody-control/melody-control.component.scss
+++ b/src/app/modules/main-panel/components/melody-control/melody-control.component.scss
@@ -3,6 +3,14 @@
   padding-bottom: 10px;
 }
 
+.border-control-melodia {
+   border-color: black;
+   border-style: solid;
+   border-width:thin;
+   padding: 40px 40px 40px 40px;
+   border-radius: 10px;
+}
+
 .size-checkbox {
   width: 90px;
   height: 90px;
