--- a/src/app/modules/main-panel/components/voice/voice.component.html
+++ b/src/app/modules/main-panel/components/voice/voice.component.html
@@ -1,13 +1,31 @@
-<div class="d-flex flex-column">
-  <div class="d-flex">
-    <h6>Voz {{voz}}</h6>
-    <i class="circle-play"></i>
+<div class="d-flex-inline flex-column">
+  <div class="row">
+    <div class="col-3">
+      <h6><b>Voz {{voice}}</b></h6>
+    </div>
+    <div class="col-3">
+      <i class="bi-play-circle pointer" style="font-size: 1.4rem; color: green"></i>
+    </div>
+    <div class="col-3">
+      <i class="bi-pause-circle pointer" style="font-size: 1.4rem;"></i>
+    </div>
+    <div class="col-3">
+      <i class="bi-stop-circle pointer" style="font-size: 1.4rem; color: red"></i>
+    </div>
   </div>
 
-  <div class="d-flex">
-    <input type="checkbox" class="size-checkbox" /> &nbsp;&nbsp;
-    <div class="panel-notas col-12">
-    </div>
+
+  <input type="checkbox" class="size-checkbox" [checked]="this.activated" (click)="toggleCheck()" />
+
+    <div class="d-flex panel-notas">
+      <div *ngIf="this.notes && this.notes.length > 0">
+          <div *ngFor="let note of this.notes; let i = index" class="sep-notas">
+            <app-musical-note-in-voice [noteName]="note.name" [noteFrequency]="this.frequencies[i]"
+              color="color-{{note.name}}" fontSize="small" [width]=30 [disabledClick]=true>
+            </app-musical-note-in-voice>
+
+          </div>
+      </div>
   </div>
 
 </div>
