feat(visualzación de las notas en cada una de los canales de voz)

--- a/src/app/modules/main-panel/components/main/main.component.html
+++ b/src/app/modules/main-panel/components/main/main.component.html
@@ -8,11 +8,12 @@
   <div class="col-2 text-center">
     <app-notes-repository></app-notes-repository>
   </div>
-  <div class="col-8">
+  <div class="col-10">
     <app-melody-control></app-melody-control>
   </div>
+  <!--
   <div class="col-2">
     <app-assembler-code></app-assembler-code>
-  </div>
+  </div> -->
 
 </div>
