--- a/src/app/modules/main-panel/components/musical-note-in-voice/musical-note-in-voice.component.html
+++ b/src/app/modules/main-panel/components/musical-note-in-voice/musical-note-in-voice.component.html
@@ -1,10 +1,11 @@
 
-  <app-musical-note [noteName]="this.noteName" [noteFrequency]="this.noteFrequency" 
-      color="color-{{this.noteName}}" [fontSize]="this.fontSize" [width]=this.width    
-      >
+  <div class="d-flex flex-column">
+  <app-musical-note [noteName]="this.noteName" [noteFrequency]="this.noteFrequency"
+      color="color-{{this.noteName}}" [fontSize]="this.fontSize" [width]=this.width>
   </app-musical-note>
-
+  <div class="d-flex">
     <i class="bi-file-minus pointer"></i>
     <small class="size-seconds">{{this.minTime}}</small>
     <i class="bi-file-plus pointer"></i>
-
+  </div>
+</div>
