--- a/src/app/modules/main-panel/components/voice/voice.component.html
+++ b/src/app/modules/main-panel/components/voice/voice.component.html
@@ -1,31 +1,29 @@
+<div class="row">
+  <div class="col-3">
+    <h6><b>Voz {{voice}}</b></h6>
+  </div>
+  <div class="col-3">
+    <i class="bi-play-circle pointer" style="font-size: 1.4rem; color: green"></i>
+  </div>
+  <div class="col-3">
+    <i class="bi-pause-circle pointer" style="font-size: 1.4rem;"></i>
+  </div>
+  <div class="col-3">
+    <i class="bi-stop-circle pointer" style="font-size: 1.4rem; color: red"></i>
+  </div>
+</div>
+
 <div class="d-flex-inline flex-column">
-  <div class="row">
-    <div class="col-3">
-      <h6><b>Voz {{voice}}</b></h6>
-    </div>
-    <div class="col-3">
-      <i class="bi-play-circle pointer" style="font-size: 1.4rem; color: green"></i>
-    </div>
-    <div class="col-3">
-      <i class="bi-pause-circle pointer" style="font-size: 1.4rem;"></i>
-    </div>
-    <div class="col-3">
-      <i class="bi-stop-circle pointer" style="font-size: 1.4rem; color: red"></i>
-    </div>
-  </div>
-
-
   <input type="checkbox" class="size-checkbox" [checked]="this.activated" (click)="toggleCheck()" />
-
-    <div class="d-flex panel-notas">
-      <div *ngIf="this.notes && this.notes.length > 0">
-          <div *ngFor="let note of this.notes; let i = index" class="sep-notas">
-            <app-musical-note-in-voice [noteName]="note.name" [noteFrequency]="this.frequencies[i]"
-              color="color-{{note.name}}" fontSize="small" [width]=30 [disabledClick]=true>
-            </app-musical-note-in-voice>
-
-          </div>
+</div>
+<div class="panel-notas">
+  <div *ngIf="this.notes && this.notes.length > 0">
+    <div class="d-flex">
+      <div *ngFor="let note of this.notes; let i = index" class="sep-notas">
+          <app-musical-note-in-voice [noteName]="note.name" [noteFrequency]="this.frequencies[i]"
+            color="color-{{note.name}}" fontSize="small" [width]=30 [disabledClick]=true>
+          </app-musical-note-in-voice>
       </div>
+    </div>
   </div>
-
 </div>
