--- a/src/app/modules/main-panel/components/voice/voice.component.scss
+++ b/src/app/modules/main-panel/components/voice/voice.component.scss
@@ -2,10 +2,11 @@
   border-style: solid;
   border-width: thin;
   border-color: black;
-  height: 60px;
+  height: 90px;
 }
 
 .sep-notas {
+  padding-top: 1px;
   padding-left: 2px;
   padding-right: 2px;
 }
