--- a/src/app/modules/main-panel/components/musical-note/musical-note.component.html
+++ b/src/app/modules/main-panel/components/musical-note/musical-note.component.html
@@ -1,4 +1,4 @@
-<button type="button" class="btn btn-primary position-relative {{this.color}}" [disabled]=this.disabledClick
+<button type="button" class="btn btn-primary position-relative {{this.color}} {{this.pointer}}"
   [ngStyle]="{'max-width': width, 'min-width': width}" (click)="clickNote()">
   <b><span [ngStyle]="{'font-size': fontSize}">{{ noteName }}</span></b>
   <span class="position-absolute top-0 start-50 translate-middle badge rounded-pill bg-danger">
