--- a/src/app/modules/main-panel/components/octave/octave.component.html
+++ b/src/app/modules/main-panel/components/octave/octave.component.html
@@ -1,7 +1,15 @@
 <div class="d-flex flex-column">
-      <div class="separacion-notas" *ngFor="let noteName of this.notesName; let i = index">
-        <app-musical-note [noteName]="noteName" [noteFrequency]="this.notesFrequencies[i]" color="color-{{noteName}}" [width]=47 (clickedNote)="eventSelectedNote($event)" ></app-musical-note>
-      <!--  <button type="button" class="btn btn-primary position-relative color-{{noteName}} width-note">
+  <div class="separacion-notas" *ngFor="let noteName of this.notesName; let i = index">
+    <div class="row">
+      <div class="col">
+        <app-musical-note [noteName]="noteName" [noteFrequency]="this.notesFrequencies[i]" color="color-{{noteName}}"
+          [width]=47 (clickedNote)="eventSelectedNote($event)"></app-musical-note>
+      </div>
+      <div class="col">
+        <i class="bi-play-circle pointer" (click)="playNote(noteName)"></i>
+      </div>
+    </div>
+    <!--  <button type="button" class="btn btn-primary position-relative color-{{noteName}} width-note">
           <b><small>{{ noteName }}</small></b>
           <span class="position-absolute top-0 start-50 translate-middle badge rounded-pill bg-danger">
             <small>{{ this.notesFrequencies[i] }}</small>
