--- a/src/app/modules/main-panel/components/voice/voice.component.html
+++ b/src/app/modules/main-panel/components/voice/voice.component.html
@@ -3,7 +3,7 @@
     <h6><b>Canal de Voz {{voice}}</b></h6>
   </div>
   <div class="col-3">
-    <i class="bi-play-circle pointer" style="font-size: 1.4rem; color: green"></i>
+    <i class="bi-play-circle pointer" style="font-size: 1.4rem; color: green" (click)="play()"></i>
   </div>
   <div class="col-3">
     <i class="bi-pause-circle pointer" style="font-size: 1.4rem;"></i>
@@ -23,7 +23,7 @@
         <div *ngFor="let note of this.notes; let i = index" class="sep-notas">
           <app-musical-note-in-voice [noteName]="note.name" [noteFrequency]="this.note.frequency"
             color="color-{{note.name}}" fontSize="small" [width]=30 [disabledClick]="true"
-            (clickedNote)="clickedNote($event)" (erasedNote)="erasedNote($event, i)" >
+            (clickedNote)="clickedNote($event)" (erasedNote)="erasedNote($event, i)" (changedTime)="changedTime($event, i)" >
           </app-musical-note-in-voice>
         </div>
       </div>
