feat(voice): Se implementa el play para que toque todas las notas de un canal de voz.

--- a/src/app/modules/main-panel/components/melody-control/melody-control.component.html
+++ b/src/app/modules/main-panel/components/melody-control/melody-control.component.html
@@ -4,7 +4,7 @@
 <br>
 
 <div class="d-flex justify-content-around">
-  <i class="bi-play-circle pointer" style="font-size: 2rem; color: green"></i>
+  <i (click)="clickPlay()" class="bi-play-circle pointer" style="font-size: 2rem; color: green"></i>
   <i class="bi-pause-circle pointer" style="font-size: 2rem; color: black"></i>
   <i class="bi-stop-circle pointer" style="font-size: 2rem; color: red"></i>
 </div>
