--- a/src/app/modules/main-panel/components/octave/octave.component.scss
+++ b/src/app/modules/main-panel/components/octave/octave.component.scss
@@ -7,6 +7,11 @@
   width: 47px;
 }
 
+.color-NS {
+   background-color: #DDDDDD;
+   color: #002A88;
+}
+
 .color-Do {
   background-color: #FFA500;
   color: #002A88;
