--- a/src/app/modules/main-panel/components/musical-note-in-voice/musical-note-in-voice.component.html
+++ b/src/app/modules/main-panel/components/musical-note-in-voice/musical-note-in-voice.component.html
@@ -1,12 +1,17 @@
 <div class="d-flex flex-column" *ngIf="this.noteName != null && this.noteName != ''">
   <i class="bi-x-square text-center pointer" matTooltip="Quitar" (click)="deleteNote()"></i>
   <br>
-  <app-musical-note [noteName]="this.noteName" [noteFrequency]="this.noteFrequency" color="color-{{this.noteName}}"
-    [fontSize]="this.fontSize" [width]=this.width [disabledClick]="this.disabledClick" (clickedNote)="_clickedNote()">
-  </app-musical-note>
   <div class="d-flex">
+    <i class="bi-chevron-compact-left pointer" (click)="clickOffsetLeft()" matTooptip="Desplaza a la izquierda la nota"></i>
+    <app-musical-note [noteName]="this.noteName" [noteFrequency]="this.noteFrequency" color="color-{{this.noteName}}"
+      [fontSize]="this.fontSize" [width]=this.width [disabledClick]="this.disabledClick" (clickedNote)="_clickedNote()">
+    </app-musical-note>
+    <i class="bi-chevron-compact-right pointer" (click)="clickOffsetRight()" matTooptip="Desplaza a la derecha la nota"></i>
+  </div>
+  <div class="d-flex justify-content-center">
     <i class="bi-file-minus pointer" (click)="clickMinusTime()" matTooltip="Disminuye el tiempo"></i>
     <small class="size-seconds">{{this.minTime}}</small>
-    <i class="bi-file-plus pointer" (click)="clickPlusTime()" matTooltip="Aumenta el tiempo" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Aumenta el volumen"></i>
+    <i class="bi-file-plus pointer" (click)="clickPlusTime()" matTooltip="Aumenta el tiempo" data-bs-toggle="tooltip"
+      data-bs-placement="bottom" data-bs-title="Aumenta el volumen"></i>
   </div>
 </div>
