--- a/src/app/modules/main-panel/components/voice/voice.component.html
+++ b/src/app/modules/main-panel/components/voice/voice.component.html
@@ -22,9 +22,9 @@
       <div class="d-flex">
         <div *ngFor="let note of this.notes; let i = index" class="sep-notas">
           <app-musical-note-in-voice [noteName]="note.name" [noteFrequency]="this.note.frequency"
-            color="color-{{note.name}}" fontSize="small" [width]=30 [disabledClick]="true"
+            color="color-{{note.name}}" fontSize="small" [width]=30 [disabledClick]="true" [minTime]="this.note.time"
             (clickedNote)="clickedNote($event)" (erasedNote)="erasedNote($event, i)" (changedTime)="changedTime($event, i)"
-            (offsetLeft)="clickOffsetLeft(i)" (offsetRight)="clickOffsetRight(i)" >
+            (offsetLeft)="clickOffsetLeft(i)" (offsetRight)="clickOffsetRight(i)">
           </app-musical-note-in-voice>
         </div>
       </div>
