se sincronizan las 3 voces

--- a/src/app/modules/main-panel/components/voice/voice.component.scss
+++ b/src/app/modules/main-panel/components/voice/voice.component.scss
@@ -2,7 +2,9 @@
   border-style: solid;
   border-width: thin;
   border-color: black;
-  height: 90px;
+  height: 110px;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 
 .sep-notas {
