--- a/src/app/modules/main-panel/components/musical-note/musical-note.component.scss
+++ b/src/app/modules/main-panel/components/musical-note/musical-note.component.scss
@@ -2,6 +2,11 @@
   width: 47px;
 }
 
+.note-playing {
+  width: 60px;
+  z-index: 1000;
+  box-shadow: 5px 5px 0;
+}
 
 .color-Do {
   background-color: #FFA500;
