--- a/src/app/modules/main-panel/components/octave/octave.component.html
+++ b/src/app/modules/main-panel/components/octave/octave.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column">
+<div class="d-flex flex-column" cdkDropList>
   <div class="separacion-notas" *ngFor="let noteName of this.notesName; let i = index">
     <div class="row">
       <div class="col">
