feat(Componente musical-note): se integra con los observers de SoundChip
  El componente musical-note se integra con el servicio de notas, que a su vez
  se integra con los observers de SoundChip. De esta manera, el componente
  ahora puede saber cuando empieza a sonar la nota y cuando termina, y de esa
  forma pues por ejemplo hacer algun efecto en la nota cuando empieza a sonar y
  cuando termina.

--- a/src/app/modules/main-panel/components/musical-note/musical-note.component.html
+++ b/src/app/modules/main-panel/components/musical-note/musical-note.component.html
@@ -1,5 +1,5 @@
-<button type="button" class="btn btn-primary position-relative {{this.color}} {{this.pointer}}"
-  [ngStyle]="{'max-width': width, 'min-width': width}" (click)="clickNote()">
+<button type="button" class="btn btn-primary position-relative {{this.color}} {{this.pointer}} {{this.sizeClass}}"
+   (click)="clickNote()">
   <b><span [ngStyle]="{'font-size': fontSize}">{{ noteName }}</span></b>
   <span class="position-absolute top-0 start-50 translate-middle badge rounded-pill bg-danger">
     <small>{{ this.noteFrequency }}</small>
